load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix go.f110.dev/xerrors

gazelle(name = "gazelle")

go_library(
    name = "xerrors",
    srcs = ["error.go"],
    importpath = "go.f110.dev/xerrors",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "xerrors_test",
    srcs = ["error_test.go"],
    embed = [":xerrors"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
